Bug 165455 - Start Center: hover state doesn't work consistently with SAL_RTL_ENABLED=1 and gtk3
Summary: Start Center: hover state doesn't work consistently with SAL_RTL_ENABLED=1 an...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.8.0 target:25.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Start-Center GTK3 RTL-UI
  Show dependency treegraph
 
Reported: 2025-02-26 10:21 UTC by Buovjaga
Modified: 2025-03-10 08:17 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2025-02-26 10:21:27 UTC
Run with SAL_RTL_ENABLED=1 SAL_USE_VCLPLUGIN=gtk3

1. Have a bunch of recent document thumbnails in Start Center
2. Hover the mouse over them

You might see some of the thumbnails get their hover state activated, but most don't react. Yesterday in my bug stream I saw a state, where the state seemed to be mirrored across the row of thumbnails, so if my mouse was over the leftmost thumbnail, the rightmost one got highlighted. Today I can't repro that specific case.

Bibisected with linux-64-7.1 to 5a342bde16fb46c895eec302af73d7836226eccf
weld backing window
Comment 1 Eyal Rozenberg 2025-02-26 21:26:32 UTC
I'm seeing inconsistent reaction, i.e. no reaction most of the time, but as I move my mouse around, I suddently see the hover effect over some item with the mouse not actually hovering over it. Anyway, confirming. Build info:

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d1f97a537b576454b2d93406d372cc4ed36d0b32
CPU threads: 4; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: en-IL (en_IL); UI: en-US
Comment 2 Caolán McNamara 2025-03-07 20:54:03 UTC
https://gerrit.libreoffice.org/c/core/+/182643 should get the tooltip working as far as I can see. The hover highlight is presumably something similar, but needs a seperate fix.
Comment 3 Commit Notification 2025-03-07 21:53:49 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4ba511f17e7ccbb52e3b83dea77ab4b27025d1e7

Related: tdf#165455 get tooltips working for RTL custom widgets under GTK

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-03-08 00:01:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8e2effa8955db4dc4b31145fbb14b53636b32186

Resolves: tdf#165455 fix hover in RTL custom widgets under GTK

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2025-03-08 00:03:37 UTC
I wonder if this is the only situation where parts of a custom widget have tooltips or invalidation vs the entire widget.

backports to 25.2 in gerrit
Comment 6 Commit Notification 2025-03-10 00:49:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/48c12deb6e5ece3412cee38bb29654a1a73eaf57

Related: tdf#165455 get tooltips working for RTL custom widgets under GTK

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-03-10 00:49:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/94b264cd0484860e58decef27a15ad865c26ef0d

Resolves: tdf#165455 fix hover in RTL custom widgets under GTK

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Buovjaga 2025-03-10 08:17:46 UTC
Cool, seems to be tracking now.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a3d767248392dd1acffd7b16b45b2841e410d528
CPU threads: 8; OS: Linux 6.13; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded