Related: tdf#165455 get tooltips working for RTL custom widgets under GTK

Change-Id: I0e011b4d8d72c5133297127381ffe5c86e81ec51
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182643
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>